2002-07-28  Rune Zedeler <rune@zedeler.dk>
	
	* lily/note-spacing.cc (stem_dir_correction) Add property
	knee_spacing_correction controlling the amount of optical spacing
	added to knees.
	
2002-07-28  Glen Prideaux  <gprideau@odyssey.apana.org.au>
       
       * lily/syllable-group.cc (set_lyric_align): Only fiddle with
       alignment if a note has more than a single lyric so single stanza
       songs are aligned correctly.

2002-07-28  Han-Wen  <hanwen@cs.uu.nl>

	* input/test/broken-spanner-adjustment.ly: new file.

2002-07-27  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* scripts/lilypond-book.py: Handle printfilename also together
	with {small,}verbatim

2002-07-27  Juergen Reuter  <reuter@ipd.uka.de>

	* scm/output-lib.scm, lily/note-head.cc: fixed broken baroque
	note-head style by setting grob property font-family
	automatically.

2002-07-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/lilypond-book.itely (Insert music snippets
	into your texts using lilypond-book): Briefly mention HTML
	documents.  Started rewrite, but lost inspiration.

	* lily/grob-scheme.cc (get_original, get_system, get_broken_into):
	Move scheme funcs from grob.cc and spanner.cc.

	* lily, flower: Ran buildscripts/ontgaar.py.  See also
	http://lilypond.org/wiki/?CodingStandards.
	
	* Documentation/GNUmakefile: Remove regression-test stuff.
	(deep-WWW-clean): Remove wiki-dump.  Fixes web-clean target.

	* Documentation/regression-test.tely: Remove.

	* Documentation/user/refman.itely (Text scripts): Comment out ref
	to PostScript output.

	* lily/beam.cc (knee_b): Fix to also work if some dirs are not
	set.

	* lily/beam.cc (set_stem_directions): For knees, set stems to
	their natural direction.

2002-07-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/stem.cc (calc_stem_info): Don't force stems of kneed beams
	to reach middle staff line.

	* lily/beam.cc (consider_auto_knees): Recalculate beam position
	after deciding for a knee.
